# icelandic-data

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  badge.json  docker-compose.yml  history.jsonl  import_fundargerdir.py  import_meeting.py  pyproject.toml  setup.sh
.claude/skills/: annual-report-cache.md  byggdastofnun.md  car.md  co2.md  domstolar.md  eea_sdi.md  farsaeld_barna.md  ferdamalastofa.md  financials.md  fuel.md  hms.md  (+34 more)
evidence-reports/: Dockerfile  package-lock.json
ops/: README.md  icelandic-data-dms.sh
scripts/: agricultural_land_map.py  air_quality.py  bench_maps.py  bilaspa_2026.py  build_cache.py  build_distribution_report.py  build_income_report.py  build_tax_burden_report.py  byggdastofnun.py  car.py  co2.py  eea_sdi.py  farsaeld_barna.py  ferdamalastofa.py  fetch-annual-report.sh  financials.py  fjarlog.py  fuel_prices.py  gengi.py  grassland_map.py  grassland_probability_heatmap.py  hagstofan.py  hagstofan_cpi.py  hagstofan_income.py  hagstofan_population_wages.py  health_panel.py  health_summary.py  health_verdict.py  heimsmarkmid.py  hms_indices.py  housing_completions.py  import_to_planitor.py  income_distribution.py  kortagerð.py  landeignaskra.py  landlaeknir.py  laun.py  lmi.py  lmi_hrl.py  maelabord_nautgripa.py  (+25 more)
tests/: conftest.py  test_byggdastofnun.py  test_cache_consistency.py  test_co2.py  test_health_summary.py  test_health_verdict.py  test_heimsmarkmid.py  test_maps_render.py  test_nautgripa_busnr_landsnr.py  test_rikisreikningur.py  test_tekjusagan.py  test_velsaeldarvisar.py  test_vernd.py
(+152 files in other folders)
